clippy_test_errors.txt
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   C:\Users\nwaug\Desktop\Blockchain\DripsWave\StrellerMinds-SmartContracts\contracts\community\Cargo.toml
workspace: C:\Users\nwaug\Desktop\Blockchain\DripsWave\StrellerMinds-SmartContracts\Cargo.toml
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   C:\Users\nwaug\Desktop\Blockchain\DripsWave\StrellerMinds-SmartContracts\contracts\diagnostics\Cargo.toml
workspace: C:\Users\nwaug\Desktop\Blockchain\DripsWave\StrellerMinds-SmartContracts\Cargo.toml
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   C:\Users\nwaug\Desktop\Blockchain\DripsWave\StrellerMinds-SmartContracts\contracts\documentation\Cargo.toml
workspace: C:\Users\nwaug\Desktop\Blockchain\DripsWave\StrellerMinds-SmartContracts\Cargo.toml
    Checking certificate v0.1.0 (C:\Users\nwaug\Desktop\Blockchain\DripsWave\StrellerMinds-SmartContracts\contracts\certificate)
warning: duplicated attribute
 --> contracts\certificate\src\test.rs:1:8
  |
1 | #![cfg(test)]
  |        ^^^^
  |
note: first defined here
 --> contracts\certificate\src\lib.rs:8:7
  |
8 | #[cfg(test)]
  |       ^^^^
help: remove this attribute
 --> contracts\certificate\src\test.rs:1:8
  |
1 | #![cfg(test)]
  |        ^^^^
  = help: for further information visit https://rust-lang.github.io/rust-clippy/rust-1.93.0/index.html#duplicated_attributes
  = note: `#[warn(clippy::duplicated_attributes)]` on by default

warning: unused import: `errors::CertificateError`
 --> contracts\certificate\src\test.rs:6:5
  |
6 |     errors::CertificateError,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `FieldType`
  --> contracts\certificate\src\lib.rs:15:64
   |
15 |     CertificateTemplate, ComplianceRecord, ComplianceStandard, FieldType, MintCertificateParams,
   |                                                                ^^^^^^^^^

error[E0277]: the trait bound `ScVal: TryFrom<&Option<BytesN<32>>>` is not satisfied
  --> contracts\certificate\src\types.rs:57:1
   |
57 | #[contracttype]
   | ^^^^^^^^^^^^^^^ the trait `core::convert::From<soroban_sdk::BytesN<32>>` is not implemented for `soroban_sdk::xdr::ScVal`
   |
   = help: the following other types implement trait `core::convert::From<T>`:
             `&soroban_sdk::xdr::ScVal` implements `core::convert::From<soroban_env_common::object::ScValObjRef<'_>>`
             `soroban_sdk::xdr::ScVal` implements `core::convert::From<&()>`
             `soroban_sdk::xdr::ScVal` implements `core::convert::From<&bool>`
             `soroban_sdk::xdr::ScVal` implements `core::convert::From<&core::option::Option<T>>`
             `soroban_sdk::xdr::ScVal` implements `core::convert::From<&i128>`
             `soroban_sdk::xdr::ScVal` implements `core::convert::From<&i32>`
             `soroban_sdk::xdr::ScVal` implements `core::convert::From<&i64>`
             `soroban_sdk::xdr::ScVal` implements `core::convert::From<&soroban_sdk::Address>`
           and 36 others
   = note: required for `soroban_sdk::BytesN<32>` to implement `core::convert::Into<soroban_sdk::xdr::ScVal>`
   = note: required for `soroban_sdk::xdr::ScVal` to implement `core::convert::From<&core::option::Option<soroban_sdk::BytesN<32>>>`
   = note: 1 redundant requirement hidden
   = note: required for `&core::option::Option<soroban_sdk::BytesN<32>>` to implement `core::convert::Into<soroban_sdk::xdr::ScVal>`
   = note: required for `soroban_sdk::xdr::ScVal` to implement `core::convert::TryFrom<&core::option::Option<soroban_sdk::BytesN<32>>>`
   = note: required for `&core::option::Option<soroban_sdk::BytesN<32>>` to implement `core::convert::TryInto<soroban_sdk::xdr::ScVal>`
   = note: the full name for the type has been written to 'C:\Users\nwaug\Desktop\Blockchain\DripsWave\StrellerMinds-SmartContracts\target\debug\deps\certificate-a35758ef61de9bbf.long-type-15835681110327752736.txt'
   = note: consider using `--verbose` to print the full type name to the console
   = note: this error originates in the attribute macro `contracttype` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ScVal: TryFrom<&Option<BytesN<32>>>` is not satisfied
   --> contracts\certificate\src\types.rs:115:1
    |
115 | #[contracttype]
    | ^^^^^^^^^^^^^^^ the trait `core::convert::From<soroban_sdk::BytesN<32>>` is not implemented for `soroban_sdk::xdr::ScVal`
    |
    = help: the following other types implement trait `core::convert::From<T>`:
              `&soroban_sdk::xdr::ScVal` implements `core::convert::From<soroban_env_common::object::ScValObjRef<'_>>`
              `soroban_sdk::xdr::ScVal` implements `core::convert::From<&()>`
              `soroban_sdk::xdr::ScVal` implements `core::convert::From<&bool>`
              `soroban_sdk::xdr::ScVal` implements `core::convert::From<&core::option::Option<T>>`
              `soroban_sdk::xdr::ScVal` implements `core::convert::From<&i128>`
              `soroban_sdk::xdr::ScVal` implements `core::convert::From<&i32>`
              `soroban_sdk::xdr::ScVal` implements `core::convert::From<&i64>`
              `soroban_sdk::xdr::ScVal` implements `core::convert::From<&soroban_sdk::Address>`
            and 36 others
    = note: required for `soroban_sdk::BytesN<32>` to implement `core::convert::Into<soroban_sdk::xdr::ScVal>`
    = note: required for `soroban_sdk::xdr::ScVal` to implement `core::convert::From<&core::option::Option<soroban_sdk::BytesN<32>>>`
    = note: 1 redundant requirement hidden
    = note: required for `&core::option::Option<soroban_sdk::BytesN<32>>` to implement `core::convert::Into<soroban_sdk::xdr::ScVal>`
    = note: required for `soroban_sdk::xdr::ScVal` to implement `core::convert::TryFrom<&core::option::Option<soroban_sdk::BytesN<32>>>`
    = note: required for `&core::option::Option<soroban_sdk::BytesN<32>>` to implement `core::convert::TryInto<soroban_sdk::xdr::ScVal>`
    = note: the full name for the type has been written to 'C:\Users\nwaug\Desktop\Blockchain\DripsWave\StrellerMinds-SmartContracts\target\debug\deps\certificate-a35758ef61de9bbf.long-type-6484244963712404364.txt'
    = note: consider using `--verbose` to print the full type name to the console
    = note: this error originates in the attribute macro `contracttype` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
warning: `certificate` (lib test) generated 3 warnings
error: could not compile `certificate` (lib test) due to 2 previous errors; 3 warnings emitted
